[FIX] sign: keep frame in sign box on wrong aspect ratio
Steps to reproduce:
- Install Sign
- Open Sign, add a document and put a signature box
- Make the sign box have a weird aspect ratio (very short and super wide
  for example)

Issues:
When you sign with the frame, the frame will be partially hidden making
the hash invisible.

Solution:
Put the container back just like in the 16.0, that way we don't have
the weird CSS behavior that we had previously.

opw-4042289

closes odoo/enterprise#68015

Related: odoo/odoo#175819

--- a/sign/static/src/scss/sign_common.scss
+++ b/sign/static/src/scss/sign_common.scss
@@ -173,9 +173,9 @@
     }
     .o_sign_frame.active {
         visibility: visible;
-        top: 30%;
+        top: 10%;
         left: 5%;
-        height: 65%;
+        height: 80%;
         width: 20%;
         border: 3px solid #017e84;
         border-right: none;
